--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "electron": "^23.1.0",
     "express": "^4.18.2",
-    "shelljs": "^0.8.5"
+    "shelljs": "^0.8.5",
+    "tree-kill": "^1.2.2"
   }
 }
