--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Cyclone web IDE",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx playwright test",
     "start": "electron ."
   },
   "repository": {
@@ -23,5 +23,9 @@
     "express": "^4.18.2",
     "shelljs": "^0.8.5",
     "tree-kill": "^1.2.2"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.32.1",
+    "playwright": "^1.32.1"
   }
 }
